--- a/client/src/random/tic_tac_toe.css
+++ b/client/src/random/tic_tac_toe.css
@@ -29,7 +29,7 @@ body {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: bold;
     line-height: 50px;
     height: 64px;
@@ -39,7 +39,12 @@ body {
     text-align: center;
     width: 64px;
 }
-
+.game-board {
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 .square:focus {
     outline: none;
 }
@@ -56,14 +61,12 @@ body {
     display: -ms-flexbox;  /* TWEENER - IE 10 */
     display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
     display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
-
-    align-items: flex-start;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .game-info {
-    margin-left: 20px;
+    margin: 24px;
 }
 
 .tic-tac-toe-container {
